--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:ntgzSt08eEVC92LFOxgT6Y6tSq9p37JEM+Jy/ck3OKo=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -23,15 +23,6 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
-MAIL_FROM_NAME="${APP_NAME}"
-
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
@@ -44,3 +35,21 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+MAIL_MAILER=smtp
+MAIL_HOST=cpsrv56.misshosting.com
+MAIL_PORT=587
+MAIL_USERNAME=test@rekonomista.com
+MAIL_PASSWORD=Oleksandr123
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=test@rekonomista.com
+MAIL_FROM_NAME="${APP_NAME}"
+
+IMAP_HOST=cpsrv56.misshosting.com
+IMAP_PORT=993
+IMAP_ENCRYPTION=ssl
+IMAP_VALIDATE_CERT=true
+IMAP_USERNAME=test@rekonomista.com
+IMAP_PASSWORD=Oleksandr123
+IMAP_DEFAULT_ACCOUNT=default
+IMAP_PROTOCOL=imap
